=============================
Changelog for atreal.filecart
=============================
(name of developer listed in brackets)

1.1 (Unreleased)
----------------

    - On zip export, use if possible filename instead of content id.
      [thomasdesvenain]

    - Avoid doubles in zip export.
      [thomasdesvenain]

    - Works under Plone 4.3.
      [thomasdesvenain]


Version 1.0.0rc1 - 2009-12-22
-----------------------------
    - Bug Fix : Portlet was shown empty when not available. Now he's not shown.
      Property decorator is necessary on available method.
      [Florent Michon]

Version 1.0.0beta2 - 2009-09-29
---------------------------
    - Bug Fix : Compatibility with kss actions of richfile plugins.
      [Florent Michon]

Version 1.0.0beta1 - 2009-09-07
---------------------------
    - First Public Release
      [Florent Michon]

Version 0.1.0 - Unreleased
---------------------------
    - First development.
      [Florent Michon]

    - Initial package structure.
      [zopeskel]
