@@ -13,6 +13,11 @@
         layer="atreal.filecart.interfaces.IFileCartLayer"
         />
     <browser:resource
+        name="arrow_bottom_right.png"
+        image="arrow_bottom_right.png"
+        layer="atreal.filecart.interfaces.IFileCartLayer"
+        />
+    <browser:resource
         name="atreal.filecart.kss"
         file="viewlets.kss"
         layer="atreal.filecart.interfaces.IFileCartLayer"
@@ -27,7 +32,7 @@
         image="fc-controls-actions_mapping.png"
         layer="atreal.filecart.interfaces.IFileCartLayer"
         />
-    
+
     <!-- ControlPanel -->
     <adapter factory=".controlpanel.FileCartControlPanelAdapter" />
     <browser:page
@@ -58,7 +63,7 @@
         allowed_attributes="isCartable isInCart"
         layer="atreal.filecart.interfaces.IFileCartLayer"
         />
-    
+
     <!-- -->
     <browser:page
          for="*"
