@@ -21,7 +21,7 @@
 
   <metal:listing define-macro="folder_listing"
                  tal:define="nosortclass view/get_nosort_class">
-    
+
     <div class="visualClear" id="clear-space-before-navigation"><!-- --></div>
 
     <div tal:replace="structure view/batching" tal:condition="not:view/show_all"/>
@@ -42,13 +42,13 @@
           <th colspan="6" class="nosort">
             <span tal:omit-tag="" i18n:translate="tableheading_all_items_selected">
             All <tal:block replace="view/batch/items_on_page" i18n:name="count"/> items on this
-            page are selected. 
+            page are selected.
             </span>
             <!---->
-            <a tal:attributes="href view/selectall_url" 
+            <a tal:attributes="href view/selectall_url"
                id="cartcontents-selectall-completebatch"
                class="cart-update-selection"
-               i18n:translate="tableheading_select_all_items">Select all 
+               i18n:translate="tableheading_select_all_items">Select all
             <tal:block replace="view/batch/size" i18n:name="count"/> items in this folder.</a>
           </th>
         </tr>
@@ -56,7 +56,7 @@
           <th colspan="6" class="nosort">
             <span tal:omit-tag="" i18n:translate="tableheading_all_items_selected">
             All <tal:block replace="view/batch/size" i18n:name="count"/> items in this folder
-            are selected. 
+            are selected.
             </span>
             <!-- -->
             <a tal:attributes="href view/selectnone_url" id="cartcontents-clearselection"
@@ -83,7 +83,7 @@
       </thead>
 
       <metal:block tal:condition="view/batch">
-        <tbody>
+        <tbody tal:define="portal_url context/@@plone_portal_state/portal_url">
           <tal:items tal:repeat="item view/batch">
             <tr tal:attributes="class item/table_row_class;
                                 id string:folder-contents-item-${item/id};" >
@@ -100,7 +100,7 @@
                 <input type="hidden" name="selected_obj_uids:list" value="#"
                        tal:attributes="value item/UID" />
                 <label tal:content="item/title_or_id"
-                       tal:attributes="for string:cb_${item/id}" 
+                       tal:attributes="for string:cb_${item/id}"
                        class="hiddenStructure">
                   Item Title
                 </label>
@@ -108,7 +108,10 @@
               <td>
                 <span tal:condition="not: item/is_deleted"
                       tal:attributes="class item/type_class">
-                  <img tal:replace="structure item/icon" />
+                <span tal:condition="item/is_additional|nothing">
+                  <img tal:attributes="src string:$portal_url/++resource++arrow_bottom_right.png" />
+                </span>
+                  <img tal:attributes="src string:$portal_url/${item/icon}" />
                   <a href="#" tal:attributes="href  item/view_url;
                                               title string:${item/obj_type}: ${item/description};
                                               class item/state_class;">
@@ -116,8 +119,8 @@
                   </a>
                 </span>
                 <span tal:condition="item/is_deleted">
-                  <img src="error_log_icon.gif" />
-                    <tal:title content="item/title_or_id"/>
+                  <img tal:attributes="src string:$portal_url/error_log_icon.gif" />
+                  <tal:title content="item/title_or_id"/>
                 </span>
               </td>
               <tal:notdeleted condition="not: item/is_deleted">
@@ -132,7 +135,7 @@
                         tal:content="item/size"
                         tal:attributes="class item/state_class"> size </span>
                 </td>
-                
+
                 <td tal:condition="view/ispreviewenabled">
                   <span i18n:translate=""
                         tal:condition="item/UID">
@@ -140,7 +143,7 @@
                   </span>
                   <span tal:condition="not: item/UID">&nbsp;</span>
                 </td>
-                
+
               </tal:notdeleted>
               <tal:deleted condition="item/is_deleted">
                 <td>Item deleted</td>
